welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: ';' expected but 'else' found.
	}else{
         ^Array2:14: error: Unmatched closing brace '}' ignored here
}
^