welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	avance();
	if(!estFaceMur){
		T(i) = getCouleurSol();avance();
		}
	}else{
		recule();
	}
}